--- a/styles/board.css
+++ b/styles/board.css
@@ -25,9 +25,9 @@ body {
 }
 
 .odd-row .cell:nth-of-type(even) {
-	background-color: #096918;
+	background-color: #6e4b20;
 }
 
 .even-row .cell:nth-of-type(odd) {
-	background-color: #096918;
+	background-color: #6e4b20;
 }
