--- a/styles/board.css
+++ b/styles/board.css
@@ -35,6 +35,10 @@ body {
 	border-top: 2px solid rgb(80, 45, 26);
 }
 
+#chessboard div:first-child {
+	border-left: 2px solid rgb(80, 45, 26);
+}
+
 .odd-row .cell:nth-of-type(even) {
 	background-color: #6e4b20;
 }
