--- a/styles/board.css
+++ b/styles/board.css
@@ -39,6 +39,10 @@ body {
 	border-left: 2px solid rgb(80, 45, 26);
 }
 
+#chessboard div:last-child {
+	border-right: 2px solid rgb(80, 45, 26);
+}
+
 .odd-row .cell:nth-of-type(even) {
 	background-color: #6e4b20;
 }
